# fast_utc

./: .gitignore  Cargo.toml  GEMINI.md  README.md
benches/: timestamp_bench_chrono.rs  timestamp_bench_coarsetime.rs
scripts/: bench_fast.sh
src/: lib.rs
