[package]
name = "utctimestamp"
version = "0.1.4"
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2021"
repository = "https://github.com/athre0z/utctimestamp"
description = "Simple & fast 64 bit UTC time types"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.42"
coarsetime = { version = "0.1.36", optional = true }

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "timestamp_bench_coarsetime"
harness = false

[[bench]]
name = "timestamp_bench_chrono"
harness = false
required-features = []

[features]
default = ["coarsetime-support"]
serde-support = ["serde"]
coarsetime-support = ["coarsetime"]

[profile.bench]
debug = true
