[package]
name = "fast_utc"
version = "0.1.0"
authors = ["llvm-x86 <kagari.shusei@proton.me>"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/capital-levite/fast_utc"
description = "Simple & fast 64 bit UTC time types"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.42"
coarsetime = { version = "0.1.36", optional = true }

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "timestamp_bench_coarsetime"
harness = false

[[bench]]
name = "timestamp_bench_chrono"
harness = false
required-features = []

[features]
default = ["coarsetime-support"]
serde-support = ["serde"]
coarsetime-support = ["coarsetime"]

[profile.bench]
debug = true
